--- a/dsvendas/src/main/resources/application.properties
+++ b/dsvendas/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.open-in-view=false
+spring.profiles.active=test
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming.physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
